<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/about_category">
                			
        <PreferenceScreen
		    android:title="@string/about"
		    android:summary="@string/about_summary">
			<intent
			    android:targetClass="com.gregmcnew.android.pax.AboutActivity" android:targetPackage="com.gregmcnew.android.pax" android:action="android.intent.action.MAIN"/>
		</PreferenceScreen>
		
        <PreferenceScreen
		    android:title="@string/upgrade"
		    android:summary="@string/upgrade_summary">
			<intent
			    android:targetClass="com.gregmcnew.android.pax.UpgradeActivity"
			    android:targetPackage="com.gregmcnew.android.pax"
			    android:action="android.intent.action.VIEW"/>
		</PreferenceScreen>
	</PreferenceCategory>

    <PreferenceCategory android:title="@string/general_settings">

    	<ListPreference android:key="@string/ai_difficulty"
    					android:entries="@array/ai_difficulty_array"
                        android:entryValues="@array/ai_difficulty_array"
                        android:title="@string/ai_difficulty"
                        android:defaultValue="@string/ai_difficulty_easy" android:persistent="true"/>

    	<ListPreference android:key="@string/game_speed"
    					android:title="@string/game_speed"
                        android:entries="@array/game_speed_array"
                        android:entryValues="@array/game_speed_array"
                        android:defaultValue="@string/game_speed_normal" android:persistent="true"/>

    </PreferenceCategory>

</PreferenceScreen>